tests/baselines/reference/moduleNodeNextImportFix.baseline
// === Syntax and Semantic Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/moduleNodeNextImportFix.ts':


==== /tests/cases/fourslash/src/index.mts (0 errors) ====
    import { util } from './deps.mts'
    export function main() {
        util()
    }
==== /tests/cases/fourslash/src/deps.mts (0 errors) ====
    export function util() {}

Semantic Diagnostics for file '/tests/cases/fourslash/moduleNodeNextImportFix.ts':
/tests/cases/fourslash/src/index.mts(1,22): error TS5097: An import path can only end with a '.mts' extension when 'allowImportingTsExtensions' is enabled.


==== /tests/cases/fourslash/src/index.mts (1 errors) ====
    import { util } from './deps.mts'
                         ~~~~~~~~~~~~
!!! error TS5097: An import path can only end with a '.mts' extension when 'allowImportingTsExtensions' is enabled.
    export function main() {
        util()
    }
==== /tests/cases/fourslash/src/deps.mts (0 errors) ====
    export function util() {}